added dialog for new game, and styled it, also added event handeling for newGame

--- a/src/main/resources/languages/startNewGameView.properties
+++ b/src/main/resources/languages/startNewGameView.properties
@@ -7,10 +7,29 @@ startNewGame.classType.rogue=null
 startNewGame.classType.warrior=null
 startNewGame.classType.ranger=null
 startNewGame.classType.custom=null
-startNewGame.goals=null
-startNewGame.health=null
-startNewGame.gold=null
-startNewGame.inventory=null
-startNewGame.score=null
 startNewGame.start=null
 startNewGame.back=null
+startNewGame.storyColumn=null
+startNewGame.playerLabel=null
+startNewGame.nameLabel=null
+startNewGame.goalsLabel=null
+startNewGame.classStatsLabel=null
+startNewGame.healthLabel=null
+startNewGame.manaLabel=null
+startNewGame.goldLabel=null
+startNewGame.damageLabel=null
+startNewGame.criticalChanceLabel=null
+startNewGame.armorLabel=null
+startNewGame.classComboBoxPromptText=null
+startNewGame.addGoalButton=null
+startNewGame.removeGoalButton=null
+startNewGame.goalColumn=null
+startNewGame.goalDescriptionColumn=null
+startNewGame.startButton=null
+startNewGame.backButton=null
+
+
+
+alert.confirmation=null
+alert.removeGoalConfirmation=null
+alert.backToMainMenuConfirmation=null
