--- a/src/main/resources/languages/startNewGameView_fr_FR.properties
+++ b/src/main/resources/languages/startNewGameView_fr_FR.properties
@@ -5,12 +5,29 @@ startNewGame.class=Classe
 startNewGame.classType.mage=Mage
 startNewGame.classType.rogue=Voleur
 startNewGame.classType.warrior=Guerrier
-startNewGame.classType.ranger=Archer
+startNewGame.classType.ranger=Ranger
 startNewGame.classType.custom=Personnalisé
-startNewGame.goals=Objectifs
-startNewGame.health=Santé
-startNewGame.gold=Or
-startNewGame.inventory=Inventaire
-startNewGame.score=Score
 startNewGame.start=Démarrer
 startNewGame.back=Retour
+startNewGame.storyColumn=Histoire
+startNewGame.playerLabel=Joueur
+startNewGame.nameLabel=Nom
+startNewGame.goalsLabel=Objectifs
+startNewGame.classStatsLabel=Statistiques de classe
+startNewGame.healthLabel=Santé
+startNewGame.manaLabel=Mana
+startNewGame.goldLabel=Or
+startNewGame.damageLabel=Dommages
+startNewGame.criticalChanceLabel=Chance critique
+startNewGame.armorLabel=Armure
+startNewGame.classComboBoxPromptText=Sélectionner une classe
+startNewGame.addGoalButton=Ajouter un objectif
+startNewGame.removeGoalButton=Supprimer l'objectif
+startNewGame.goalColumn=Objectif
+startNewGame.goalDescriptionColumn=Description
+startNewGame.startButton=Démarrer
+startNewGame.backButton=Retour
+
+alert.confirmation=Confirmation
+alert.removeGoalConfirmation=Voulez-vous vraiment supprimer cet objectif ?
+alert.backToMainMenuConfirmation=Voulez-vous revenir au menu principal ? Tous les progrès seront perdus.
