--- a/src/main/resources/languages/startNewGameView_no_NO.properties
+++ b/src/main/resources/languages/startNewGameView_no_NO.properties
@@ -3,14 +3,31 @@ startNewGame.player=Spiller
 startNewGame.name=Navn
 startNewGame.class=Klasse
 startNewGame.classType.mage=Magiker
-startNewGame.classType.rogue=Tyv
+startNewGame.classType.rogue=Luring
 startNewGame.classType.warrior=Kriger
-startNewGame.classType.ranger=Bueskytter
-startNewGame.classType.custom=Spesial
-startNewGame.goals=Mål
-startNewGame.health=Helse
-startNewGame.gold=Gull
-startNewGame.inventory=Inventar
-startNewGame.score=Poeng
+startNewGame.classType.ranger=Ranger
+startNewGame.classType.custom=Tilpasset
 startNewGame.start=Start
 startNewGame.back=Tilbake
+startNewGame.storyColumn=Historie
+startNewGame.playerLabel=Spiller
+startNewGame.nameLabel=Navn
+startNewGame.goalsLabel=Mål
+startNewGame.classStatsLabel=Klassestatistikk
+startNewGame.healthLabel=Helse
+startNewGame.manaLabel=Mana
+startNewGame.goldLabel=Gull
+startNewGame.damageLabel=Skade
+startNewGame.criticalChanceLabel=Kritisk sjanse
+startNewGame.armorLabel=Panser
+startNewGame.classComboBoxPromptText=Velg klasse
+startNewGame.addGoalButton=Legg til mål
+startNewGame.removeGoalButton=Fjern mål
+startNewGame.goalColumn=Mål
+startNewGame.goalDescriptionColumn=Beskrivelse
+startNewGame.startButton=Start
+startNewGame.backButton=Tilbake
+
+alert.confirmation=Bekreftelse
+alert.removeGoalConfirmation=Er du sikker på at du vil fjerne dette målet?
+alert.backToMainMenuConfirmation=Er du sikker på at du vil gå tilbake til hovedmenyen? All fremgang vil gå tapt.
