--- a/src/main/resources/languages/startNewGameView_de_DE.properties
+++ b/src/main/resources/languages/startNewGameView_de_DE.properties
@@ -5,12 +5,29 @@ startNewGame.class=Klasse
 startNewGame.classType.mage=Magier
 startNewGame.classType.rogue=Schurke
 startNewGame.classType.warrior=Krieger
-startNewGame.classType.ranger=Bogenschütze
-startNewGame.classType.custom=Custum
-startNewGame.goals=Ziele
-startNewGame.health=Gesundheit
-startNewGame.gold=Gold
-startNewGame.inventory=Inventar
-startNewGame.score=Punkte
-startNewGame.start=Start
+startNewGame.classType.ranger=Waldläufer
+startNewGame.classType.custom=Benutzerdefiniert
+startNewGame.start=Starten
 startNewGame.back=Zurück
+startNewGame.storyColumn=Geschichte
+startNewGame.playerLabel=Spieler
+startNewGame.nameLabel=Name
+startNewGame.goalsLabel=Ziele
+startNewGame.classStatsLabel=Klassenstatistiken
+startNewGame.healthLabel=Leben
+startNewGame.manaLabel=Mana
+startNewGame.goldLabel=Gold
+startNewGame.damageLabel=Schaden
+startNewGame.criticalChanceLabel=Kritische Trefferchance
+startNewGame.armorLabel=Rüstung
+startNewGame.classComboBoxPromptText=Klasse auswählen
+startNewGame.addGoalButton=Ziel hinzufügen
+startNewGame.removeGoalButton=Ziel entfernen
+startNewGame.goalColumn=Ziel
+startNewGame.goalDescriptionColumn=Beschreibung
+startNewGame.startButton=Starten
+startNewGame.backButton=Zurück
+
+alert.confirmation=Bestätigung
+alert.removeGoalConfirmation=Möchten Sie dieses Ziel wirklich entfernen?
+alert.backToMainMenuConfirmation=Möchten Sie zum Hauptmenü zurückkehren? Alle Fortschritte gehen verloren.
