--- a/src/main/resources/languages/startNewGameView_en_US.properties
+++ b/src/main/resources/languages/startNewGameView_en_US.properties
@@ -7,10 +7,27 @@ startNewGame.classType.rogue=Rogue
 startNewGame.classType.warrior=Warrior
 startNewGame.classType.ranger=Ranger
 startNewGame.classType.custom=Custom
-startNewGame.goals=Goals
-startNewGame.health=Health
-startNewGame.gold=Gold
-startNewGame.inventory=Inventory
-startNewGame.score=Score
 startNewGame.start=Start
 startNewGame.back=Back
+startNewGame.storyColumn=Story
+startNewGame.playerLabel=Player
+startNewGame.nameLabel=Name
+startNewGame.goalsLabel=Goals
+startNewGame.classStatsLabel=Class Stats
+startNewGame.healthLabel=Health
+startNewGame.manaLabel=Mana
+startNewGame.goldLabel=Gold
+startNewGame.damageLabel=Damage
+startNewGame.criticalChanceLabel=Critical Chance
+startNewGame.armorLabel=Armor
+startNewGame.classComboBoxPromptText=Select Class
+startNewGame.addGoalButton=Add Goal
+startNewGame.removeGoalButton=Remove Goal
+startNewGame.goalColumn=Goal
+startNewGame.goalDescriptionColumn=Description
+startNewGame.startButton=Start
+startNewGame.backButton=Back
+
+alert.confirmation=Confirmation
+alert.removeGoalConfirmation=Are you sure you want to remove this goal?
+alert.backToMainMenuConfirmation=Are you sure you want to go back to the main menu? All progress will be lost.
