Grammar fix in createStoryView resource bundle

--- a/src/main/resources/languages/createStoryView_en.properties
+++ b/src/main/resources/languages/createStoryView_en.properties
@@ -1,6 +1,6 @@
 newStoryView.tableName=Story Name
 newStoryView.tablePassageAmount=Passage Amount in Story
-newStoryView.tableLinkAmount=Link Amounts in Story
+newStoryView.tableLinkAmount=Link Amount in Story
 newStoryView.newStoryButton=New Story
 newStoryView.editStoryButton=Edit Story
 newStoryView.deleteStoryButton=Delete Story
