added css and changed how gameview is played and visualised

--- a/src/main/resources/languages/GameView.properties
+++ b/src/main/resources/languages/GameView.properties
@@ -3,3 +3,8 @@ game.name=null
 game.health=null
 game.mana=null
 game.gold=null
+game.menu=null
+game.goalButton=null
+passageLabel=null
+game.score=null
+game.inventory=null
