--- a/src/main/resources/languages/GameView_de_DE.properties
+++ b/src/main/resources/languages/GameView_de_DE.properties
@@ -1,5 +1,10 @@
-game.choices=Deine Wahlen sind
+game.choices=Ihre Auswahlmöglichkeiten sind:
 game.name=Name
 game.health=Gesundheit
 game.mana=Mana
 game.gold=Gold
+game.menu=Menü
+game.goalButton=Ziel
+passageLabel=Passage
+game.score=Punktzahl
+game.inventory=Inventar
