--- a/src/main/resources/languages/GameView_en.properties
+++ b/src/main/resources/languages/GameView_en.properties
@@ -1,5 +1,11 @@
-game.choices=Your choices are
+game.choices=Your choices are:
 game.name=Name
 game.health=Health
 game.mana=Mana
 game.gold=Gold
+game.menu=Menu
+game.goalButton=Goal
+passageLabel=Passage
+game.score=Score
+game.inventory=Inventory
+
