--- a/src/main/resources/languages/GameView_fr_FR.properties
+++ b/src/main/resources/languages/GameView_fr_FR.properties
@@ -1,5 +1,10 @@
-game.choices=Quels sont vos choix
+game.choices=Vos choix sont :
 game.name=Nom
 game.health=Santé
 game.mana=Mana
 game.gold=Or
+game.menu=Menu
+game.goalButton=Objectif
+passageLabel=Passage
+game.score=Score
+game.inventory=Inventaire
