--- a/src/main/resources/languages/GameView_no_NO.properties
+++ b/src/main/resources/languages/GameView_no_NO.properties
@@ -1,5 +1,10 @@
-game.choices=Dine valg er
+game.choices=Dine valg er:
 game.name=Navn
 game.health=Helse
 game.mana=Mana
 game.gold=Gull
+game.menu=Meny
+game.goalButton=Mål
+passageLabel=Passasje
+game.score=Poengsum
+game.inventory=Inventar
