Added cannonDeleteOpeningPassage resource bundle

--- a/src/main/resources/languages/editStoryView.properties
+++ b/src/main/resources/languages/editStoryView.properties
@@ -19,6 +19,7 @@ passageAlreadyLinked=null
 passageAlreadyExists=null
 warning=null
 confirmation=null
+cannotDeleteOpeningPassage=null
 
 title=null
 description=null
