--- a/src/main/resources/languages/editStoryView_de_DE.properties
+++ b/src/main/resources/languages/editStoryView_de_DE.properties
@@ -19,6 +19,7 @@ passageAlreadyLinked=Dieser Abschnitt hat bereits einen Link zum ausgewählten Ab
 passageAlreadyExists=Dieser Titel für den Abschnitt existiert bereits.
 warning=Warnung
 confirmation=Bestätigung
+cannotDeleteOpeningPassage=Sie können den Einführungspassus nicht löschen. Sie können ihn nur bearbeiten.
 
 title=Titel:
 description=Beschreibung:
