--- a/src/main/resources/languages/editStoryView_en.properties
+++ b/src/main/resources/languages/editStoryView_en.properties
@@ -19,6 +19,7 @@ passageAlreadyLinked=This passage already have a link to the selected passage.
 passageAlreadyExists=This Passage Title Already Exists.
 warning=Warning
 confirmation=Confirmation
+cannotDeleteOpeningPassage=You cannot delete the opening passage. You can only edit it.
 
 title=Title:
 description=Description:
