--- a/src/main/resources/languages/editStoryView_fr_FR.properties
+++ b/src/main/resources/languages/editStoryView_fr_FR.properties
@@ -19,6 +19,7 @@ passageAlreadyLinked=Ce passage est déjà lié au passage sélectionné.
 passageAlreadyExists=Ce titre de passage existe déjà.
 warning=Avertissement
 confirmation=Confirmation
+cannotDeleteOpeningPassage=Vous ne pouvez pas supprimer le passage d'ouverture. Vous ne pouvez que le modifier.
 
 title=Titre :
 description=Description :
