--- a/src/main/resources/languages/GameView_en_US.properties
+++ b/src/main/resources/languages/GameView_en_US.properties
@@ -4,7 +4,7 @@ game.health=Health
 game.mana=Mana
 game.gold=Gold
 game.menu=Menu
-game.goalButton=Goal
+game.goalButton=Goals
 passageLabel=Passage
 game.score=Score
 game.inventory=Inventory
